blue-green/rollouts.yml

apiVersion: argoproj.io/v1alpha1

kind: Rollout

metadata:

  name: rollout-bluegreen

spec:

  replicas: 2

  revisionHistoryLimit: 2

  selector:

    matchLabels:

      app: rollout-bluegreen

  template:

    metadata:

      labels:

        app: rollout-bluegreen

    spec:

      containers:

      - name: rollouts-demo

        image: argoproj/rollouts-demo:blue

        imagePullPolicy: Always

        ports:

        - containerPort: 8080

  strategy:

    blueGreen:

      activeService: rollout-bluegreen-active

      previewService: rollout-bluegreen-preview
      
      autoPromotionEnabled: false
