blue-green/service.yml
apiVersion: v1

kind: Service

metadata:
  name: rollout-bluegreen-active

spec:

  selector:

    app: rollout-bluegreen

  ports:

  - protocol: TCP

    port: 80

    targetPort: 8080



---

apiVersion: v1

kind: Service

metadata:

  name: rollout-bluegreen-preview

spec:

  selector:

    app: rollout-bluegreen

  ports:

  - protocol: TCP

    port: 80

    targetPort: 8080
